# ThorKernel

./: .gitignore  CMakeLists.txt  README.md
arch/arm64/: CMakeLists.txt  asm.c  cache.s  crt0.s  exception.c  mmu.s  thor.ld  vectors.s
devices/: CMakeLists.txt  uart.c
include/: bootinfo.h  efi.h  efi_api.h  efi_def.h  efi_lib.h  kernel.h  kstdio.h  kstdlib.h  kstring.h
include/arch/: asm.h  context.h
include/devices/: uart.h
include/mm/: mm.h  pmm.h  vmm.h
init/: CMakeLists.txt  main.c
lib/: CMakeLists.txt
lib/efi/: CMakeLists.txt  efi_lib.c
lib/libc/: CMakeLists.txt
lib/libc/stdio/: CMakeLists.txt  printf.c  putc.c  puts.c  sprintf.c  vprintf.c  vsprintf.c
lib/libc/string/: CMakeLists.txt  guidcmp.c  itoa.c  memcmp.c  memcpy.c  memset.c  strcmp.c  strcpy.c  strlen.c  strrep.c  strrev.c
mm/: CMakeLists.txt  mm.c  pmm.c  vmm.c
